fix: hide scrollbars on mobile for currency filters and advert table
Add CSS to hide scrollbars for improved mobile UX.

#VERCEL_SKIP

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,10 @@ body {
     text-wrap: balance;
   }
 
+  .w-1\/7 {
+    width: 14.285%;
+     }
+     
   .scrollbar-hide {
     -ms-overflow-style: none;
     scrollbar-width: none;
